# thewhitelotusgraph

./: .gitignore  White_Lotus_Characters__completed_.csv  characters_input_skeleton.csv  index.html  main.py  output_character_relationships_with_details.csv  pyproject.toml  relationships_input.csv  visualize_graph.py  white_lotus_edges_completed.csv  white_lotus_graph.html
whitelotus_graph_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
